--- a/todos.html
+++ b/todos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="scripts/todos.js" defer></script>
+
     <title>View To-Do Tasks</title>
 </head>
 <body>
@@ -32,5 +34,12 @@
           <h1>View Tasks</h1>
     </header>
     <p>A page that allows the user to view all of the to-do tasks for a specific user by picking the user from a dropdown.</p>
+    <select id="userDropdown">
+
+    </select>
+
+    <div id="userTasks">
+
+    </div>
 </body>
 </html>
