--- a/todos.html
+++ b/todos.html
@@ -34,12 +34,15 @@
           <h1>View Tasks</h1>
     </header>
     <p>A page that allows the user to view all of the to-do tasks for a specific user by picking the user from a dropdown.</p>
+    
     <select id="userDropdown">
 
     </select>
+    <button id="searchButton">Search</button>
 
-    <div id="userTasks">
+    <p id="displayTask">
 
+    </p>
     </div>
 </body>
 </html>
