--- a/new_todo.html
+++ b/new_todo.html
@@ -1,36 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Add To-Do Task</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="/scripts/new_todo.js"></script>
+
+  <title>Add To-Do Task</title>
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">Stay Organized</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="new_todo.html">Add New Tasks</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="todos.html">View Tasks</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-          <h1>Add a Task</h1>
-    </header>
-    <p>A page that allows the user to add a to-do task.</p>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Stay Organized</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="new_todo.html">Add New Tasks</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="todos.html">View Tasks</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <h1 style="text-align: center;">Add a Task</h1>
+  </header>
+  <p style="text-align: center;">A page that allows the user to add a to-do task.</p>
+
+  <main style="text-align: center;">
+    <h3>Add an Item to Your To-Do List!</h3>
+
+    <form id="toDoListForm">
+      <label for="userNames"></label>
+      <select name="userNames" id="userNames" placeholder="Username..." style="width: 10rem;"></select>
+
+      <label for="categoryNames"></label>
+      <select name="categoryNames" id="categoryNames" placeholder="To-do Category..." style="width: 10rem;"></select>
+
+     
+      <br>
+      <label for="detailsToDo" style="font-weight: bold;">Add Details to Your Item!</label>
+      <br>
+      <textarea id="description" name="description" rows="4" cols="50" placeholder="To-Do Item Details..."></textarea>
+      <br>
+      <label for="deadline" style="font-weight: bold;">Add Your Deadline!</label>
+      <input type="text" name="deadline" id="deadline" placeholder="YYYY-MM-DD">
+      <br> <br>
+      <label for="urgency"></label>
+      <select name="urgency" id="urgency" placeholder="Urgency Levels..." style="width: 10rem;">
+        <option>Select Urgency</option>
+        <option value="low">Low</option>
+        <option value="medium">Medium</option>
+        <option value="high">High</option>
+      </select>
+      <br> <br>
+      <button type="button" onclick="newToDoItem()">Add To-Do Item!</button>
+      <div id=newToDo></div>
+    </form>
+
+
+    <hr>
+    <section id="toDoList"></section>
+  </main>
+
+
+  <footer style="text-align: center;">Copyright &copy; Team Blue To-Do List Maker 2023</footer>
+
+
 </body>
+
 </html>
